# slidedown

./: .gitignore  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
examples/: README.md
examples/interactive-element/: hello.py  slides.md
requirements/: dev.txt  prod.txt
slidedown/: __init__.py  __main__.py  hooks.py  load.py  parse.py  slides.py
slidedown/static/: markdown.css
slidedown/styles/markdown/: github.css
