[tool.poetry]
name = "slidedown"
version = "0.1.0"
description = "Simple slide decks with Markdown and Python"
authors = ["rmorshea <ryan.morshead@gmail.com>"]
license = "MIT"
include = ["slidedown/styles/*"]

[tool.poetry.dependencies]
python = "^3.6"
docopt = "^0.6.2"
idom = "^0.1.2"
pygments = "^2.3"
cmarkgfm = "^0.4.2"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
slidedown = 'slidedown:run'
